tests/fixtures/errors/invalid_include_absolute_path.puml
@startuml
!include /tmp/not_allowed.puml
@enduml
